Created DbContext and provided api connection.

--- a/NacresKnowledgeBase.Api/appsettings.json
+++ b/NacresKnowledgeBase.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=NacresKB;User Id=postgres;Password=postgrespw;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
