--- a/NacresKnowledgeBase.Application/NacresKnowledgeBase.Application.csproj
+++ b/NacresKnowledgeBase.Application/NacresKnowledgeBase.Application.csproj
@@ -12,11 +12,12 @@
   
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.3.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
   </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\NacresKnowledgeBase.Core\NacresKnowledgeBase.Core.csproj" />
+    <ProjectReference Include="..\NacresKnowledgeBase.Infrastructure\NacresKnowledgeBase.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
