--- a/NacresKnowledgeBase.Api/NacresKnowledgeBase.Api.csproj
+++ b/NacresKnowledgeBase.Api/NacresKnowledgeBase.Api.csproj
@@ -10,10 +10,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5" />
     <PackageReference Include="NSwag.AspNetCore" Version="14.0.0" />
+    <PackageReference Include="MediatR" Version="12.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NacresKnowledgeBase.Infrastructure\NacresKnowledgeBase.Infrastructure.csproj" />
+    <ProjectReference Include="..\NacresKnowledgeBase.Application\NacresKnowledgeBase.Application.csproj" />
   </ItemGroup>
 
 </Project>
