--- a/NacresKnowledgeBase.Infrastructure/NacresKnowledgeBase.Infrastructure.csproj
+++ b/NacresKnowledgeBase.Infrastructure/NacresKnowledgeBase.Infrastructure.csproj
@@ -10,6 +10,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.8" />
   </ItemGroup>
 
   <PropertyGroup>
