--- a/NacresKnowledgeBase.Infrastructure/NacresKnowledgeBase.Infrastructure.csproj
+++ b/NacresKnowledgeBase.Infrastructure/NacresKnowledgeBase.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.8" />
+    <PackageReference Include="PdfPig" Version="0.1.11" />
   </ItemGroup>
 
   <PropertyGroup>
