Integrated Real Gemini API as embedding model

--- a/NacresKnowledgeBase.Api/NacresKnowledgeBase.Api.csproj
+++ b/NacresKnowledgeBase.Api/NacresKnowledgeBase.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>11b64a84-e8c1-4246-a589-df979391d838</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
