--- a/NacresKnowledgeBase.Application/NacresKnowledgeBase.Application.csproj
+++ b/NacresKnowledgeBase.Application/NacresKnowledgeBase.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+    <PackageReference Include="Pgvector.EntityFrameworkCore" Version="0.2.2" />
   </ItemGroup>
   
   <ItemGroup>
