--- a/NacresKnowledgeBase.Api/appsettings.json
+++ b/NacresKnowledgeBase.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=NacresKB;User Id=postgres;Password=postgrespw;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=NacresKB;User Id=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
